# $Id: Changes,v 1.95 2003/12/22 05:30:52 petdance Exp $
Revision history for Perl extension WWW::Mechanize


0.71_01
	[THINGS THAT MAY BREAK YOUR CODE]
	* WWW::Mechanize::Link's constructor has a new argument
	  that needs to be passed in, at the start of the argument
	  list.

	[ENHANCEMENTS]
	* WWW::Mechanize::Link object now takes a $base URL, and will
	  return absolute URLs with the url_abs() method.  Thanks to
	  Ashley Pond.
	* Added another script to WWW::Mechanize::Examples.  It's a
	  script that didn't make it into Spidering Hacks.

	[INSTALL & TESTS]
	* Heavy use of the new Test::Memory::Cycle module.
	* Fixed Makefile.PL so that the tests are selected under Win32.
	* Changed t/mech-dump.t so that the test succeeds under Win32.


0.70	Sun Nov 30 23:45:27 CST 2003
	[THINGS THAT MAY BREAK YOUR CODE]
	* Redirects are now handled better by LWP, so the code that
	  changes POSTs to GETs on redirects has been removed.

	[FIXES]
	* Fixed redirect_ok(), which had its API changed out from under
	  it in LWP 5.76.

	[ENHANCEMENTS]
	* New warnings in find_link() for strings that are space padded,
	  and for text matches that are passed a regex.  Thanks to
	  Jim Cromie.

	[DOCUMENTATION]
	* Patches from Mark Stosberg and Jim Cromie.

	[INTERNALS]
	* Removed all the checking for Carp.  I don't know why I
	  was thinking that Carp wasn't core. RT #4523.

	Also, a big bump in requirements on LWP: We need 5.76.


0.66	Thu Nov 13 14:35:31 CST 2003

	No new functionality.  Fixed up some install bugs and made a
	few documentation tweaks, mostly to plug Spidering Hacks.


0.65	Mon Nov 10 00:11:06 CST 2003
	[ENHANCEMENTS]
	* Made a _parse_html() method that you can override or call
	  manually, per request from Gavin Estey.

	[FIXES]
	* Made some path naming use File::Spec->catfile so that
	  they work correctly under Windows.
	* "make clean" cleans up temp flag files.

	[INTERNALS]
	* Uses the new Test::Pod 1.00 for simplicity.


0.64	October 23, 2003  11:15pm